# bazel-polyglot-monorepo

./: .gitignore  README.md  WORKSPACE  maven_install.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: javascript-scan-main.yml  javascript-scan-pr.yml  main.yml  pr.yml
non-bazel/app-abc/: README.md  index.js  package.json
non-bazel/app-xyz/: README.md  index.js  package.json  pnpm-lock.yaml
projects/go/app/: BUILD.bazel  main.go
projects/go/greeting/: BUILD.bazel  greeting.go
projects/java/src/main/java/com/greeter/greeter/: BUILD.bazel  Greeter.java
projects/java/src/main/java/com/greeter/main/: BUILD.bazel  Main.java
projects/javascript/app/: BUILD.bazel  calculator.js  index.js
projects/python/app/: BUILD.bazel  main.py
projects/python/calculator/: BUILD.bazel  calculator.py
