load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "app",
    data = [
        "calculator",
        "@npm//express:express"
    ],
    entry_point = ":index.js",
)

filegroup(
    name="calculator",
    srcs=["calculator.js"],
    visibility = ["//projects/javascript/app/app:__pkg__"] 
)