# Needs to match with python_deps in root WORKSPACE file
load("@python_deps//:requirements.bzl", "requirement")

py_library(
    name = "calculator",
    srcs = ["main.py"],
    deps = [
        requirement("Flask"),
        "//projects/python/calculator:calculator",
    ],
)

py_binary(
    name = "app",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":calculator"],
)