load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "main",
    srcs = ["Main.java"],
    visibility = ["//:__subpackages__"],
    deps = ["//projects/java/src/main/java/com/greeter/greeter"],
)

java_binary(
    name = "Main",
    main_class = "com.greeter.main.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [":main"],
)